--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.7.0",
-    "@panates/eslint-config": "^1.0.6",
-    "@panates/eslint-config-ts": "^1.0.6",
-    "@panates/tsconfig": "^1.0.6",
+    "@panates/eslint-config": "^1.0.8",
+    "@panates/eslint-config-ts": "^1.0.8",
+    "@panates/tsconfig": "^1.0.8",
     "@rollup-extras/plugin-clean": "^1.3.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -50,7 +50,7 @@
     "jest-preset-angular": "^14.1.1",
     "madge": "^7.0.0",
     "npm-run-path": "^5.3.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^6.0.1",
     "rollup": "^4.18.1",
@@ -62,6 +62,6 @@
     "ts-node": "github:TypeStrong/ts-node#main",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.3",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.3"
   }
 }
