--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,57 +1,45 @@
 {
   "name": "@opra/client",
-  "version": "1.0.0-alpha.22",
+  "version": "1.0.0-alpha.23",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/panates/opra.git",
-    "directory": "packages/client"
-  },
-  "scripts": {
-    "compile": "tsc",
-    "prebuild": "npm run check && npm run lint && npm run clean",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json",
-    "build:browser": "node esbuild.mjs",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
-    "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix",
-    "format": "prettier . --write --log-level=warn",
-    "check": "madge --circular src/**",
-    "test": "jest --passWithNoTests",
-    "cover": "jest --passWithNoTests --collect-coverage",
-    "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
-    "clean:src": "ts-cleanup -s src --all",
-    "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/client",
-    "clean:cover": "rimraf ../../coverage/client"
-  },
   "type": "module",
   "module": "./esm/index.js",
   "main": "./cjs/index.js",
-  "browser": "./browser.js",
   "types": "./types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./esm/index.js",
+      "browser": "./cjs/index.js",
+      "require": "./cjs/index.js",
+      "types": "./types/index.d.ts"
+    },
+    "./esm": {
+      "browser": "./browser/index.mjs",
+      "types": "./types/index.d.ts",
+      "default": "./browser/index.mjs"
+    },
+    "./cjs": {
+      "browser": "./browser/index.cjs",
+      "types": "./types/index.d.ts",
+      "default": "./cjs/index.js"
+    },
+    "./browser": {
+      "import": "./browser/index.mjs",
+      "types": "./types/index.d.ts",
+      "default": "./browser/index.cjs"
+    },
+    "./browser-cjs-min": "./browser/cjs.min.cjs",
+    "./browser-esm-min": "./browser/esm.min.mjs"
+  },
   "dependencies": {
-    "@browsery/fs": "^0.4.0",
-    "@browsery/highland": "^2.13.5",
-    "@browsery/http-parser": "^0.5.8",
-    "@browsery/i18next": "^23.11.5",
-    "@browsery/stream": "^4.3.0",
-    "@browsery/type-is": "^1.6.18-r2",
-    "@browsery/util": "^0.12.5",
-    "@opra/common": "^1.0.0-alpha.22",
+    "@opra/common": "^1.0.0-alpha.23",
     "accepts": "^1.3.8",
-    "buffer": "^6.0.3",
     "cookie": "^0.6.0",
-    "crypto-browserify": "^3.12.0",
     "encodeurl": "^2.0.0",
-    "events": "^3.3.0",
     "fast-tokenizer": "^1.3.0",
     "lodash.omit": "^4.5.0",
-    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.12.1",
@@ -64,13 +52,50 @@
     "uid": "^2.0.1"
   },
   "devDependencies": {
+    "@browsery/fs": "^0.4.0",
+    "@browsery/highland": "^2.13.5",
+    "@browsery/http-parser": "^0.5.8",
+    "@browsery/i18next": "^23.11.5",
+    "@browsery/stream": "^4.3.0",
+    "@browsery/type-is": "^1.6.18-r2",
+    "@browsery/util": "^0.12.5",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "path-browserify": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2"
+  },
+  "scripts": {
+    "compile": "tsc",
+    "prebuild": "npm run check && npm run lint && npm run clean",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "build:browser": "node esbuild.mjs",
+    "postbuild": "cp README.md ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
+    "lint": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
+    "format": "prettier . --write --log-level=warn",
+    "check": "madge --circular src/**",
+    "test": "jest --passWithNoTests",
+    "cover": "jest --passWithNoTests --collect-coverage",
+    "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
+    "clean:src": "ts-cleanup -s src --all",
+    "clean:test": "ts-cleanup -s test --all",
+    "clean:dist": "rimraf ../../build/client",
+    "clean:cover": "rimraf ../../coverage/client"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/panates/opra.git",
+    "directory": "packages/client"
   },
   "sideEffects": false,
   "files": [
     "cjs/",
     "esm/",
+    "browser/",
     "types/",
     "browser.js",
     "LICENSE",
