--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "npm-run-path": "^5.3.0",
     "prettier": "^3.3.3",
     "putil-varhelpers": "^1.6.5",
+    "putil-merge": "^3.12.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.18.1",
     "rollup-plugin-command": "^1.1.3",
