--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -35,7 +35,7 @@
     "@sqb/builder": "^4.13.0",
     "@sqb/connect": "^4.13.0",
     "@sqb/postgres": "^4.13.0",
-    "postgresql-client": "^2.12.0",
+    "postgrejs": "^2.15.1",
     "ts-gems": "^3.4.0"
   },
   "peerDependencies": {
