--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -31,6 +31,7 @@
     "@opra/core": "^1.0.0-alpha.27",
     "fast-tokenizer": "^1.3.0",
     "lodash.head": "^4.0.1",
+    "putil-promisify": "^1.10.1",
     "reflect-metadata": "^0.2.2"
   },
   "peerDependencies": {
