--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "1.0.0-alpha.28",
+  "version": "1.0.0-alpha.29",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -15,9 +15,9 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "npm run _copyi18n && npm run _copy_pkg_files",
-    "_copy_pkg_files": "cp README.md package.json ../../LICENSE ../../build/core && cp ../../package.cjs.json ../../build/core/cjs/package.json",
-    "_copyi18n": "cp -R i18n ../../build/core/i18n",
+    "postbuild": "npm run postbuild:copy_1 && npm run postbuild:copy_2",
+    "postbuild:copy_1": "cp README.md package.json ../../LICENSE ../../build/core && cp ../../package.cjs.json ../../build/core/cjs/package.json",
+    "postbuild:copy_2": "cp -R i18n ../../build/core/i18n",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -33,7 +33,7 @@
   "dependencies": {
     "@browsery/http-parser": "^0.5.8",
     "@browsery/type-is": "^1.6.18-r2",
-    "@opra/common": "^1.0.0-alpha.28",
+    "@opra/common": "^1.0.0-alpha.29",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
     "busboy": "^1.6.0",
@@ -47,12 +47,12 @@
     "fresh": "^0.5.2",
     "iconv-lite": "^0.6.3",
     "mime-types": "^2.1.35",
-    "power-tasks": "^1.7.4",
+    "power-tasks": "^1.7.7",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.12.1",
     "putil-varhelpers": "^1.6.5",
     "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
+    "raw-body": "^3.0.0",
     "reflect-metadata": "^0.2.2",
     "strict-typed-events": "^2.4.0",
     "vary": "^1.1.2"
