--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,65 +26,15 @@
     "clean:cover": "rimraf ../../coverage/core"
   },
   "dependencies": {
-    "@browsery/antlr4": "^4.13.3-r1",
-    "@browsery/http-parser": "^0.5.9-r1",
-    "@browsery/type-is": "^1.6.18-r5",
     "@opra/common": "^1.0.0-beta.2",
-    "accepts": "^1.3.8",
-    "base64-stream": "^1.0.0",
-    "busboy": "^1.6.0",
-    "bytes": "^3.1.2",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "cookie": "^0.6.0",
-    "cookie-signature": "^1.2.1",
-    "cppzst": "^2.0.12",
-    "encodeurl": "^2.0.0",
-    "fast-tokenizer": "^1.7.0",
-    "fresh": "^0.5.2",
-    "iconv-lite": "^0.6.3",
-    "mime-types": "^2.1.35",
-    "power-tasks": "^1.11.0",
-    "putil-isplainobject": "^1.1.5",
-    "putil-merge": "^3.13.0",
-    "putil-varhelpers": "^1.6.5",
-    "range-parser": "^1.2.1",
-    "raw-body": "^3.0.0",
-    "reflect-metadata": "^0.2.2",
     "node-events-async": "^1.0.0",
-    "super-fast-md5": "^1.0.3",
-    "tslib": "^2.7.0",
-    "valgen": "^5.10.0",
-    "vary": "^1.1.2"
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.7.0"
   },
   "optionalDependencies": {
-    "express": "^4.x.x || ^5.x.x",
-    "fastify": "^4.x.x"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.0.1",
-    "@types/accepts": "^1.3.7",
-    "@types/base64-stream": "^1.0.5",
-    "@types/busboy": "^1.5.4",
-    "@types/bytes": "^3.1.4",
-    "@types/content-disposition": "^0.5.8",
-    "@types/content-type": "^1.1.8",
-    "@types/cookie": "^0.6.0",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cookie-signature": "^1.1.2",
-    "@types/encodeurl": "^1.0.2",
-    "@types/express": "^4.17.21",
-    "@types/fresh": "^0.5.2",
-    "@types/mime-types": "^2.1.4",
-    "@types/range-parser": "^1.2.7",
-    "@types/vary": "^1.1.3",
-    "cookie-parser": "^1.4.6",
-    "crypto-browserify": "^3.12.0",
-    "express": "^4.19.2",
-    "fastify": "^4.28.1",
-    "path-browserify": "^1.0.1",
-    "supertest": "^7.0.0",
-    "ts-gems": "^3.5.0"
+    "ts-gems": "^3.5.1"
   },
   "type": "module",
   "exports": {
@@ -125,10 +75,6 @@
     "opra",
     "rest",
     "api",
-    "openapi",
-    "http",
-    "web",
-    "swagger",
-    "raml"
+    "core"
   ]
 }
