--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
         uses: spicyparrot/kafka-kraft-action@v1.1.0
         with:
           kafka-version: "3.7.0"
-          kafka-topics: "test-send-email"
+          kafka-topics: "test"
 
       - name: Setup NodeJS
         uses: actions/setup-node@v4
