--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,44 +73,30 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: npm
 
-      - name: Cache + Restore node_modules
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-node-modules
-        with:
-          # Cache node_modules and Puppeteer chrome
-          path: |
-            ~/.cache
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
       - name: Install NodeJS dependencies
-        uses: 'dudeofawesome/npm-install@v1'
+        run: npm ci
 
       - name: Install rman
         run: npm install rman -g
 
-      - name: Run lint
+      - name: Run linter tests
         run: rman run lint
 
-      - name: Check for circular imports
+      - name: Run circular dependency tests
         run: rman run check
 
-      - name: Run tests
+      - name: Run compile tests
+        run: rman run compile
+
+      - name: Run unit tests
         run: npm run citest
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
           KAFKA_BROKER: localhost:9092
 
-      - name: Coveralls
+      - name: Send coverage to Coveralls
         uses: coverallsapp/github-action@v2
+        # Run only once
+        if: ${{ matrix.node == '20' }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
