--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "precover": "rimraf coverage",
     "cover": "jest --passWithNoTests --coverage",
     "format": "prettier . --write --log-level=warn",
-    "precitest": "rimraf coverage",
-    "citest": "node --expose-gc ./node_modules/.bin/jest --passWithNoTests --runInBand --logHeapUsage --coverage --coverageReporters=lcov --testTimeout=30000",
+    "precitest": "rimraf coverage reports",
+    "citest": "jest --passWithNoTests --runInBand --coverage --testTimeout=30000",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -51,6 +51,7 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "jest-preset-angular": "^14.2.4",
     "madge": "^8.0.0",
     "npm-run-path": "^6.0.0",
