--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -6,13 +6,12 @@
   "license": "MIT",
   "scripts": {
     "compile": "tsc --noEmit",
-    "_prebuild": "npm run lint && npm run clean",
-    "_build": "npm run build:cjs && npm run build:esm",
+    "prebuild": "npm run lint && npm run clean",
+    "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/kafka/cjs/package.json",
     "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/kafka/esm/package.json",
-    "_postbuild": "npm run postbuild:copy_1 && npm run postbuild:copy_2 && node ../../support/postbuild.cjs",
-    "postbuild:copy_1": "cp README.md package.json ../../LICENSE ../../build/kafka",
-    "postbuild:copy_2": "cp -R i18n ../../build/kafka/i18n",
+    "postbuild": "npm run postbuild:copy && node ../../support/postbuild.cjs",
+    "postbuild:copy": "cp README.md package.json ../../LICENSE ../../build/kafka",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
