--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/nestjs",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0-beta.5",
   "description": "Opra NestJS module",
   "author": "Panates",
   "license": "MIT",
@@ -22,8 +22,8 @@
     "clean:cover": "rimraf ../../coverage/nestjs"
   },
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.4",
-    "@opra/core": "^1.0.0-beta.4",
+    "@opra/common": "^1.0.0-beta.5",
+    "@opra/core": "^1.0.0-beta.5",
     "fast-tokenizer": "^1.7.0",
     "lodash.head": "^4.0.1",
     "putil-promisify": "^1.10.1",
@@ -36,8 +36,8 @@
   },
   "optionalDependencies": {
     "@nestjs/microservices": "^10.4.4",
-    "@opra/http": "^1.0.0-beta.4",
-    "@opra/kafka": "^1.0.0-beta.4"
+    "@opra/http": "^1.0.0-beta.5",
+    "@opra/kafka": "^1.0.0-beta.5"
   },
   "devDependencies": {
     "@nestjs/platform-express": "^10.4.4",
@@ -45,6 +45,7 @@
     "@types/lodash.head": "^4.0.9",
     "express": "^4.19.2",
     "filedirname": "^3.4.0",
+    "kafkajs": "^2.2.4",
     "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
     "ts-gems": "^3.5.1"
