--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.5",
+    "@opra/common": "^1.0.0-beta.6",
     "accepts": "^1.3.8",
     "rxjs": ">=7.0.0",
     "ts-gems": "^3.5.1",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@browsery/type-is": "^1.6.18-r5",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1"
   },
   "type": "module",
