--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "jest-preset-angular": "^14.4.2",
+    "globals": "^15.13.0",
     "madge": "^8.0.0",
     "npm-run-path": "^6.0.0",
     "prettier": "^3.4.2",
