--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -31,18 +31,18 @@
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.4.15",
-    "@nestjs/core": "^10.4.15"
+    "@nestjs/common": ">=10.0.0 <12",
+    "@nestjs/core": ">=10.0.0 <12"
   },
   "optionalDependencies": {
-    "@nestjs/microservices": "^10.4.15",
+    "@nestjs/microservices": ">=10.0.0 <12",
     "@opra/http": "^1.7.1",
     "@opra/kafka": "^1.7.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
-    "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/testing": "^10.4.15",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/testing": "^11.0.1",
     "@types/lodash.head": "^4.0.9",
     "express": "^4.21.2",
     "filedirname": "^3.4.0",
