--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,12 +35,12 @@ jobs:
           --health-retries 5
 
       rabbitmq:
-        image: rabbitmq:4.0
+        image: rabbitmq
         env:
           RABBITMQ_DEFAULT_USER: guest
           RABBITMQ_DEFAULT_PASS: guest
         ports:
-          - 5672
+          - 5672:5672
 
     steps:
       - name: Start MongoDB
