--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -37,19 +37,22 @@
   "optionalDependencies": {
     "@nestjs/microservices": "^10.0.0 || ^11.0.0",
     "@opra/http": "^1.9.4",
-    "@opra/kafka": "^1.9.4"
+    "@opra/kafka": "^1.9.4",
+    "amqplib": ">=0.10.0 <1.0.0",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
     "@nestjs/platform-express": "^11.0.10",
     "@nestjs/microservices": "^11.0.6",
     "@nestjs/testing": "^11.0.10",
+    "@types/amqplib": "^0.10.6",
     "@types/lodash.head": "^4.0.9",
     "amqplib": "^0.10.5",
     "express": "^4.21.2",
     "filedirname": "^3.4.0",
     "kafkajs": "^2.2.4",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "supertest": "^7.0.0",
     "ts-gems": "^3.11.3"
   },
