--- a/packages/rabbitmq/tsconfig-build-esm.json
+++ b/packages/rabbitmq/tsconfig-build-esm.json
@@ -4,8 +4,8 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/kafka/esm",
-    "declarationDir": "../../build/kafka/types"
+    "outDir": "../../build/rabbitmq/esm",
+    "declarationDir": "../../build/rabbitmq/types"
   },
   "include": ["src"]
 }
