--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -6,12 +6,13 @@ on:
 jobs:
   test:
     name: Node v${{ matrix.node }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         node: [ '18', '20', '22' ]
 
-    runs-on: ubuntu-latest
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
 
